==> Skptak/FreeRTOS/FreeRTOS/Demo/CORTEX_LM3S102_Rowley/Demo3/ParTest.c <==
/*
 * FreeRTOS V202212.00
 * Copyright (C) 2020 Amazon.com, Inc. or its affiliates.  All Rights Reserved.
 *
 * Permission is hereby granted, free of charge, to any person obtaining a copy
 * of this software and associated documentation files (the "Software"), to deal
 * in the Software without restriction, including without limitation the rights
 * to use, copy, modify, merge, publish, distribute, sublicense, and/or sell
 * copies of the Software, and to permit persons to whom the Software is
 * furnished to do so, subject to the following conditions:
 *
 * The above copyright notice and this permission notice shall be included in
 * all copies or substantial portions of the Software.
 *
 * THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR
 * IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF MERCHANTABILITY,
 * FITNESS FOR A PARTICULAR PURPOSE AND NONINFRINGEMENT. IN NO EVENT SHALL THE
 * AUTHORS OR COPYRIGHT HOLDERS BE LIABLE FOR ANY CLAIM, DAMAGES OR OTHER
 * LIABILITY, WHETHER IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING FROM,
 * OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN THE
 * SOFTWARE.
 *
 * https://www.FreeRTOS.org
 * https://github.com/FreeRTOS
 *
 */

/*-----------------------------------------------------------
 * Simple parallel port IO routines.
 *-----------------------------------------------------------*/

/*
 */

/* Kernel include files. */
#include "partest.h"
#include "FreeRTOS.h"
#include "task.h"

/* Hardware specific include files. */
#include "DriverLib.h"

static const unsigned long ulLEDs[] = { GPIO_PIN_6, GPIO_PIN_1, GPIO_PIN_0 };

#define partstLED_PINS       ( GPIO_PIN_0 | GPIO_PIN_1 | GPIO_PIN_6 )

#define partstMAX_OUTPUT_LED ( ( unsigned char ) 3 )

/*-----------------------------------------------------------*/
void vParTestInitialise( void )
{
    portBASE_TYPE xLED;

    /* The LED's are on port B. */
    GPIODirModeSet( GPIO_PORTB_BASE, partstLED_PINS, GPIO_DIR_MODE_OUT );

    for( xLED = 0; xLED < partstMAX_OUTPUT_LED; xLED++ )
    {
        vParTestSetLED( xLED, pdFALSE );
    }
}
/*-----------------------------------------------------------*/

void vParTestSetLED( unsigned portBASE_TYPE uxLED, signed portBASE_TYPE xValue )
{
    vTaskSuspendAll();
    {
        if( uxLED < partstMAX_OUTPUT_LED )
        {
            if( xValue == pdFALSE )
            {
                GPIOPinWrite( GPIO_PORTB_BASE,
                              ulLEDs[ uxLED ],
                              ulLEDs[ uxLED ] );
            }
            else
            {
                GPIOPinWrite( GPIO_PORTB_BASE,
                              ulLEDs[ uxLED ],
                              ~ulLEDs[ uxLED ] );
            }
        }
    }
    xTaskResumeAll();
}
/*-----------------------------------------------------------*/

void vParTestToggleLED( unsigned portBASE_TYPE uxLED )
{
    portBASE_TYPE xCurrentValue;

    vTaskSuspendAll();
    {
        if( uxLED < partstMAX_OUTPUT_LED )
        {
            xCurrentValue = GPIOPinRead( GPIO_PORTB_BASE, ulLEDs[ uxLED ] );
            if( xCurrentValue )
            {
                GPIOPinWrite( GPIO_PORTB_BASE,
                              ulLEDs[ uxLED ],
                              ~ulLEDs[ uxLED ] );
            }
            else
            {
                GPIOPinWrite( GPIO_PORTB_BASE,
                              ulLEDs[ uxLED ],
                              ulLEDs[ uxLED ] );
            }
        }
    }
    xTaskResumeAll();
}
